force-app/main/default/objects/CartLineItem__c/CartLineItem__c.object-meta.xml
<CustomObject>
    <label>Cart Line Item</label>
    <nameField>
        <label>Cart Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cart Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>