force-app/main/default/objects/CartLineItem__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cart</label>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>Cart Line Items</relationshipLabel>
    <relationshipName>Cart_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>