force-app/main/default/objects/CartLineItem__c/fields/EffectiveUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>EffectiveUnitPrice__c</fullName>
    <formula>UnitListPrice__c * (1 - Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>