force-app/main/default/objects/CartLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Cart Line Items</relationshipLabel>
    <relationshipName>Cart_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>