force-app/main/default/objects/CartLineItem__c/fields/TotalNetPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalNetPrice__c</fullName>
    <formula>EffectiveUnitPrice__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>