force-app/main/default/objects/CartLineItem__c/fields/UnitListPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitListPrice__c</fullName>
    <formula>Product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>